<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity2"
    tools:showIn="@layout/activity_scrolling2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:id="@+id/space1"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textNames"
                android:layout_width="383dp"
                android:layout_height="37dp"
                android:text="@string/please_enter_who_paid_the_bill"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:id="@+id/space2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinnerWhoPaid"
                android:layout_width="382dp"
                android:layout_height="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:id="@+id/space3"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textDebtors"
                android:layout_width="382dp"
                android:layout_height="wrap_content"
                android:text="@string/please_check_the_box_between_whom_you_want_to_split_the_bill"
                android:textSize="18sp" />
        </LinearLayout>



        <ListView
            android:id="@+id/listViewDebtors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textSum"
                android:layout_width="382dp"
                android:layout_height="wrap_content"
                android:text="Please enter sum"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/Sum"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="0"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_the_bill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/history"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:text="@string/history_n"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/advert"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:text="@string/if_you_made_a_mistake_while_adding_debt_please_enter_it_again_but_with_a_negative_sum"
                android:textColor="#AF0505"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/results"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:textSize="20dp" />

        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>